--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 management.health.db.enabled=false
 management.health.diskspace.enabled=true
+
+spring.application.name=licensing-service
+spring.profiles.active=dev
+spring.config.import=configserver:http://localhost:8071
